--- a/app.json
+++ b/app.json
@@ -48,7 +48,8 @@
     "pages/article/detail/index",
     "pages/_select/extract_point/index",
     "pages/shop/detail/index",
-    "pages/store/check/order"
+    "pages/store/check/order",
+    "pages/pointExchange/index"
 
   ],
   "window": {
