线下店铺支付

--- a/app.json
+++ b/app.json
@@ -49,7 +49,8 @@
     "pages/_select/extract_point/index",
     "pages/shop/detail/index",
     "pages/store/check/order",
-    "pages/pointExchange/index"
+    "pages/pointExchange/index",
+    "pages/outlinePay/index"
 
   ],
   "window": {
