积分流程修改

--- a/app.json
+++ b/app.json
@@ -50,7 +50,8 @@
     "pages/shop/detail/index",
     "pages/store/check/order",
     "pages/pointExchange/index",
-    "pages/outlinePay/index"
+    "pages/outlinePay/index",
+    "pages/user/pointDetail/index"
 
   ],
   "window": {
